my-app-chart/templates/ingres-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: "cloudride-app-group"
    alb.ingress.kubernetes.io/group.order: "1"
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: mywebsite-service
      port:
        number: 80
  rules:
    - host: "cloudride-app.ddns.net"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: mywebsite-service
                port:
                  number: 80
