my-app-chart/templates/ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: https-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: "cloudride-app-group"
    alb.ingress.kubernetes.io/group.order: "2"
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - cloudride-app.ddns.net
      secretName: cloudride-tls  
  rules:
    - host: "cloudride-app.ddns.net"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: mywebsite-service
                port:
                  number: 80
