my-app-chart/templates/mywebsite-ingress.yaml
# mywebsite-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mywebsite-ingress-alb
  namespace: default
  annotations:
    # alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:704505749045:certificate/e1c3c46a-e125-4e8c-8ec8-be46addfe518"
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: mywebsite-service
      port:
        number: 80
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: mywebsite-service
                port:
                  number: 80
