my-app-chart/templates/webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - cloudride-app.ddns.net
      secretName: cloudride-tls
  rules:
    - host: cloudride-app.ddns.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mywebsite-service
                port:
                  number: 80
